--- a/src/Panacea.Modules.Favorites/Panacea.Modules.Favorites.csproj
+++ b/src/Panacea.Modules.Favorites/Panacea.Modules.Favorites.csproj
@@ -81,6 +81,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
     <Compile Include="FavoritesLazyItemProvider.cs" />
     <Compile Include="FavoritesManager.cs" />
     <Compile Include="FavoritesPlugin.cs" />
@@ -92,13 +95,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Panacea.ContentControls">
-      <Version>2.0.10</Version>
+      <Version>2.0.11</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Controls">
-      <Version>0.2.2</Version>
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Core">
-      <Version>9.1.0</Version>
+      <Version>10.0.0</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Models">
       <Version>0.0.5</Version>
@@ -110,7 +113,7 @@
       <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Modularity.UiManager">
-      <Version>10.2.0</Version>
+      <Version>11.0.0</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Modularity.UserAccount">
       <Version>1.2.0</Version>
@@ -123,6 +126,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\FavoritesList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
