--- a/src/Panacea.Modules.Favorites/Panacea.Modules.Favorites.csproj
+++ b/src/Panacea.Modules.Favorites/Panacea.Modules.Favorites.csproj
@@ -71,6 +71,8 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -89,6 +91,10 @@
     <Compile Include="FavoritesPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\FavoritesListViewModel.cs" />
+    <Compile Include="ViewModels\NavigationButtonViewModel.cs" />
+    <Compile Include="Views\NavigationButton.xaml.cs">
+      <DependentUpon>NavigationButton.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\FavoritesList.xaml.cs">
       <DependentUpon>FavoritesList.xaml</DependentUpon>
     </Compile>
@@ -127,6 +133,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\NavigationButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
